--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "./components/pfl.scss";
 @import "./components/footer.scss";
 @import "./components/button.scss";
+@import "./components/notification.scss";
 
 html,
 body {
