--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -168,3 +168,12 @@
     width: 100%;
   }
 }
+
+@media (min-width: 2220px) {
+  .slider-box {
+    height: 495.13px;
+  }
+  .destination-image img {
+    height: 495.13px;
+  }
+}
