--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -157,6 +157,10 @@
   .slider-box {
     height: 100%;
   }
+  .destination-image img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media (max-width: 768px) {
